--- a/package.json
+++ b/package.json
@@ -6,16 +6,31 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.12.4",
-    "jade": "~1.9.2",
-    "morgan": "~1.5.3",
-    "serve-favicon": "~2.2.1",
+    "body-parser": "1.12.4",
+    "cheerio": "0.19.0",
+    "bluebird": "2.9.27",
+    "cookie-parser": "1.3.5",
+    "express": "4.12.4",
+    "cors": "2.7.1",
+    "debug": "2.2.0",
+    "express-cors": "0.0.3",
+    "express-mongo-db": "1.0.0",
+    "faye": "1.1.1",
+    "jade": "1.9.2",
+    "mongodb": "2.0.33",
+    "faye-redis": "0.2.0",
+    "firebase": "2.2.6",
+    "mongoose": "4.0.5",
+    "morgan": "1.5.3",
+    "needle": "0.9.2",
+    "npm": "2.11.0",
+    "redis": "0.12.1",
+    "request-promise": "0.4.2",
+    "request": "2.57.0",
+    "serve-favicon": "2.2.1",
     "socket.io": "0.9.17",
-    "underscore": "",
-    "redis": "",
-    "validator": ""
+    "validator": "3.40.0",
+    "underscore": "1.8.3",
+    "underscore.string": "3.1.1"
   }
 }
